--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,11 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap');
+
 @tailwind base;
+
+* {
+  @aplly font-sourcepro;
+  background-color: rgb(255, 255, 255);
+}
 
 a {
   @apply text-blue-700;
 }
 
 a:hover {
-  @apply underline;
+@aplly cursor-pointer;
 }
 
 @tailwind components;
